v1
* updated readme

* добавил swagger описание для всех эндпоинтов, реализовал доменную логику и покрыл тестами

* добавил поддержку сортировки на уровне домена и контейнер бизнес логики

* накидал репозиторий, сделал миграцию, подкорректировал домен, покрыл интеграционным тестом

* задеплоил postgres без persistance, проверил подключение hurl для e2e тестов

* добавил ретрай логику на запросы к бд

* закончил с http слоем

* поправил баг с датами

* добавил версионирование для обработки конкурентного обновления

* добавил рейт лимиттер

* math/rand -> crypto/rand

* ci changes
