# pkg/subs/interfaces/http/routes.go
@@ -4,23 +4,33 @@ import (
 	"github.com/go-chi/chi/v5"
 
 	common "github.com/end1essrage/efmob-tz/pkg/common/cmd"
+	"github.com/end1essrage/efmob-tz/pkg/subs/application/container"
 )
 
 type SubsHandler struct {
-	//container      *container.Container
-	//authMiddleware *middleware.AuthMiddleware
-	env common.ENV
+	container *container.Container
+	env       common.ENV
 }
 
-func NewSubsHandler(env common.ENV) *SubsHandler {
+func NewSubsHandler(env common.ENV, container *container.Container) *SubsHandler {
 	return &SubsHandler{
-		env: env,
+		env:       env,
+		container: container,
 	}
 }
 
 // AddRoutes добавляет маршруты аутентификации
 // @Summary Add subscriptions routes
 func AddRoutes(r *chi.Mux, h *SubsHandler) {
-	// Регистрация
-	r.Get("/test", h.Test)
+	r.Route("/subscriptions", func(r chi.Router) {
+		r.Post("/", h.CreateSubscription)
+		r.Get("/", h.ListSubscriptions)
+		r.Get("/total", h.GetTotalCost)
+
+		r.Route("/{id}", func(r chi.Router) {
+			r.Get("/", h.GetSubscription)
+			r.Patch("/", h.UpdateSubscription)
+			r.Delete("/", h.DeleteSubscription)
+		})
+	})
 }
